Table fix on mobile view

--- a/Job Exchange/Mobile/manage-vacancies-mobile.css
+++ b/Job Exchange/Mobile/manage-vacancies-mobile.css
@@ -192,15 +192,16 @@
   top: 80px;
   left: 0px;
   width: 350px;
-  height: 160px;
-  display: flex;
-  overflow: hidden;
+  height: 190px;
+  display: block;
+  overflow: auto;
   position: absolute;
   box-shadow: 0px 1px 2px -1px rgba(0, 0, 0, 0.10000000149011612) ;
   align-items: flex-start;
   flex-shrink: 0;
   border-radius: 8px;
   background-color: rgba(255, 255, 255, 1);
+  white-space: nowrap;
 }
  
 .manage-vacancies-mobile-container14 {
